<resources>
    <string name="app_name">RoomDatabaseTutorial</string>
    <string name="this_is_custom_title">This is custom title</string>
    <string name="ok">ok</string>
    <string name="click">click</string>
    <string name="add_student">Add student</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
</resources>