<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_margin="6dp"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dialog_title"
        android:text="@string/add_student"
        android:layout_width="match_parent"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/nameEdit"
        android:hint="@string/name"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <EditText
        android:id="@+id/phoneEdit"
        android:layout_marginTop="3dp"
        android:hint="@string/phone_number"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/cancel_btn"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:layout_marginEnd="1dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/ok_btn"
            android:layout_marginStart="1dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/ok"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>